test/error/CMakeFiles/error_device_dirty_with_no_device_support.dir/depend.make
# Empty dependencies file for error_device_dirty_with_no_device_support.
# This may be replaced when dependencies are built.
